Fix favicon paths in about.html and expertise.html

--- a/about.html
+++ b/about.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html la                    <!-- Stylish geometric shape -->
-                    <path d="M25,14 L195,14 L190,56 L20,56 Z" fill="url(#logoGradient)" filter="drop-shadow(0 3px 4px rgba(0,0,0,0.25))"/>
-                    
-                    <!-- IGAP text -->
-                    <text x="87.5" y="35" font-family="Montserrat" font-size="28" font-weight="700" fill="white" text-anchor="middle" letter-spacing="3">IGAP</text>
-                    
-                    <!-- Decorative element -->
-                    <path d="M20,12 L25,12 L20,46 L15,46 Z" fill="#e74c3c" opacity="0.9"/>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - IGAP Trading</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
