--- a/kyc.html
+++ b/kyc.html
@@ -129,7 +129,7 @@
         <!-- Login Form Section -->
         <div id="loginSection" class="form-section active">
             <!-- IGAP Logo -->
-            <img src="https://placehold.co/150x50/ADD8E6/000000?text=IGAP+Logo" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
+            <img src="igap2.jpg alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
             <h2 class="text-3xl font-bold text-gray-800 mb-6">Login to KYC Portal</h2>
             <p class="text-sm text-gray-600 mb-4">
                 Your User ID: <span id="userIdDisplay" class="font-semibold text-blue-600">Loading...</span>
@@ -154,7 +154,7 @@
         <!-- Terms & Conditions / Disclaimer Section -->
         <div id="termsSection" class="form-section hidden">
             <!-- IGAP Logo -->
-            <img src="https://placehold.co/150x50/ADD8E6/000000?text=IGAP+Logo" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
+            <img src="igap2.jpg" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
             <h2 class="text-3xl font-bold text-gray-800 mb-6">Terms & Conditions and Disclaimer</h2>
             <div class="legal-text-container">
                 <h3 class="text-xl font-semibold text-gray-700 mb-2">Terms and Conditions of Information Submission</h3>
@@ -195,7 +195,7 @@
         <!-- KYC Form Section -->
         <div id="kycFormSection" class="form-section hidden">
             <!-- IGAP Logo -->
-            <img src="https://placehold.co/150x50/ADD8E6/000000?text=IGAP+Logo" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
+            <img src="igap2.jpg" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
             <h2 class="text-3xl font-bold text-gray-800 mb-6">KYC Application Form</h2>
             <form id="kycForm" class="w-full max-w-xl text-left">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
