--- a/kyc.html
+++ b/kyc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KYC Workflow</title>
+    <title>IGAP | KYC Workflow</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Inter Font -->
@@ -128,8 +128,13 @@
 
         <!-- Login Form Section -->
         <div id="loginSection" class="form-section active">
-            <!-- IGAP Logo -->
-            <img src="igap2.jpg alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
+            <!-- IGAP Logo SVG -->
+            <svg width="150" height="50" viewBox="0 0 150 50" class="mb-8 mx-auto">
+                <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"
+                      font-family="Inter, sans-serif" font-size="36" font-weight="700" fill="#60A5FA">
+                    IGAP
+                </text>
+            </svg>
             <h2 class="text-3xl font-bold text-gray-800 mb-6">Login to KYC Portal</h2>
             <p class="text-sm text-gray-600 mb-4">
                 Your User ID: <span id="userIdDisplay" class="font-semibold text-blue-600">Loading...</span>
@@ -153,8 +158,13 @@
 
         <!-- Terms & Conditions / Disclaimer Section -->
         <div id="termsSection" class="form-section hidden">
-            <!-- IGAP Logo -->
-            <img src="igap2.jpg" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
+            <!-- IGAP Logo SVG -->
+            <svg width="150" height="50" viewBox="0 0 150 50" class="mb-8 mx-auto">
+                <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"
+                      font-family="Inter, sans-serif" font-size="36" font-weight="700" fill="#60A5FA">
+                    IGAP
+                </text>
+            </svg>
             <h2 class="text-3xl font-bold text-gray-800 mb-6">Terms & Conditions and Disclaimer</h2>
             <div class="legal-text-container">
                 <h3 class="text-xl font-semibold text-gray-700 mb-2">Terms and Conditions of Information Submission</h3>
@@ -194,8 +204,13 @@
 
         <!-- KYC Form Section -->
         <div id="kycFormSection" class="form-section hidden">
-            <!-- IGAP Logo -->
-            <img src="igap2.jpg" alt="IGAP Logo" class="mb-8 max-w-[150px] h-auto">
+            <!-- IGAP Logo SVG -->
+            <svg width="150" height="50" viewBox="0 0 150 50" class="mb-8 mx-auto">
+                <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"
+                      font-family="Inter, sans-serif" font-size="36" font-weight="700" fill="#60A5FA">
+                    IGAP
+                </text>
+            </svg>
             <h2 class="text-3xl font-bold text-gray-800 mb-6">KYC Application Form</h2>
             <form id="kycForm" class="w-full max-w-xl text-left">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
@@ -566,3 +581,4 @@
     </script>
 </body>
 </html>
+
